Fixed bug for improper scrolling view on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -176,7 +176,7 @@ footer hr{
 
 @media only screen and (max-width: 768px) {
 
-	#Home{
+	#showcase{
 		background-attachment: scroll;
 	}
 
